--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -32,7 +32,9 @@
         </activity>
         <activity
             android:name="kartography.app.TakePhotoActivity"
-            android:label="@string/title_activity_take_photo" >
+            android:label="@string/title_activity_take_photo"
+            
+             >
         </activity>
         <activity
             android:name="kartography.app.SetPOILocationActivity"
