--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -23,7 +23,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="kartography.app.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,12 +35,13 @@
         <activity
             android:name="kartography.app.TakePhotoActivity"
             android:label="@string/title_activity_take_photo"
-            
+            android:screenOrientation="portrait"
              >
         </activity>
         <activity
             android:name="kartography.app.SetPOILocationActivity"
-            android:label="@string/title_activity_set_poilocation" >
+            android:label="@string/title_activity_set_poilocation" 
+            android:screenOrientation="portrait">
         </activity>
     
     <meta-data
