--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -39,7 +39,7 @@
              >
         </activity>
         <activity
-            android:name="kartography.app.SetPOILocationActivity"
+            android:name="kartography.app.SetPoiLocationActivity"
             android:label="@string/title_activity_set_poilocation" 
             android:screenOrientation="portrait">
         </activity>
