--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <!-- put permissions here -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
-    
-    <uses-feature android:name="android.hardware.camera"
-                  android:required="true" />
-    
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -24,11 +24,7 @@
         <activity
             android:name="kartography.app.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity
             android:name="kartography.app.TakePhotoActivity"
@@ -37,6 +33,23 @@
         <activity
             android:name="kartography.app.SetPOILocationActivity"
             android:label="@string/title_activity_set_poilocation" >
+        </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+        
+         <activity android:name="com.facebook.LoginActivity"
+                  android:label="@string/app_name" />
+
+        <activity
+            android:name="kartography.app.LoginActivity"
+            android:label="@string/title_activity_login">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
