--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <!-- put permissions here -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
