--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:label="@string/title_activity_take_photo" >
         </activity>
         <activity
-            android:name="kartography.app.SetPOILocationActivity"
+            android:name="kartography.app.SetPoiLocationActivity"
             android:label="@string/title_activity_set_poilocation" >
         </activity>
 
