--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -53,7 +53,7 @@
                   android:label="@string/app_name" />
 
         <activity
-            android:name="kartography.app.LoginActivity"
+            android:name="kartography.app.SignInActivity"
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
