put my key back in

--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -51,7 +51,7 @@
             android:value="AIzaSyBO1MMzQtpvvKTPh9Qa7O8ZF_2-DMjBS4k" />
         <!--
             Steven's id - "AIzaSyAHiAg777ZwSzLJN414trmNu8LQU-pTUPc"
-            Michael's id - ""
+            Michael's id - "AIzaSyBO1MMzQtpvvKTPh9Qa7O8ZF_2-DMjBS4k"
         -->
         <meta-data
             android:name="com.google.android.gms.version"
