--- a/kARTography/AndroidManifest.xml
+++ b/kARTography/AndroidManifest.xml
@@ -83,7 +83,7 @@
         </activity>
         <activity
             android:name="kartography.app.LoginHomeActivity"
-            android:label="@string/title_activity_login_home" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
